Added results after training